--- a/magda-web-client/src/Components/FeedbackForm.scss
+++ b/magda-web-client/src/Components/FeedbackForm.scss
@@ -79,8 +79,12 @@
         bottom: 24px;
     }
 
-    .privacy-link {
+    .privacy-link a {
         margin-top: 10px;
         @include AU-fontgrid(xs);
+        color: black;
+        &:hover {
+            color:black;
+        }
     }
 }
