--- a/magda-web-client/src/AppContainer.scss
+++ b/magda-web-client/src/AppContainer.scss
@@ -1,4 +1,7 @@
 @import "./variables";
+#root {
+    font-family: $font-base;
+}
 
 .app-container {
     min-height: 1000px;
@@ -10,6 +13,7 @@
     padding: 50px 0;
     margin-top: 24px;
     a {
+        font-size: 0.9rem;
         color: #fff;
     }
     .nav > li > a {
