--- a/magda-web-client/src/Pages/HomePage.scss
+++ b/magda-web-client/src/Pages/HomePage.scss
@@ -14,7 +14,7 @@
     }
     .homepage-background-img {
         position: absolute;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         z-index: -1;
     }
