--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -1,16 +1,17 @@
-@import "variables";
-
+@import "_variables";
+@import "../pancake/sass/pancake.scss";
 html {
     @include AU-fontgrid(sm);
 }
-body {
-    margin: 0;
-    padding: 0;
-    font-family: $font-base;
-    font-weight: 400;
+.au-body a {
+    text-decoration: none;
     color: $body;
-    overflow-x: hidden;
 }
+
+.au-body p {
+    max-width: 100%;
+}
+
 .sr-only {
     position: absolute;
     width: 1px;
@@ -62,10 +63,6 @@ a {
     transition: background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;
     cursor: pointer;
     color: $body;
-    &:hover,
-    &:focus {
-        text-decoration: none;
-    }
     &:hover {
         color: #ffffff;
         background-color: $magda;
@@ -130,6 +127,6 @@ h4 {
 }
 
 h5 {
-    @include AU-fontgrid(xl heading);
+    @include AU-fontgrid(xl, heading);
     font-weight: 400;
 }
