--- a/magda-web-client/src/UI/DescriptionBox.scss
+++ b/magda-web-client/src/UI/DescriptionBox.scss
@@ -1,20 +1,20 @@
-.description-box{
-    .toggle-button{
-        color: #CC3139;
-        font-size: 16px;
-        line-height: 19px;
+@import "../../variables";
+.description-box {
+    .toggle-button {
+        color: #cc3139;
+        @include AU-fontgrid(sm);
         border: none;
         cursor: pointer;
         position: relative;
         padding-left: 0px;
         margin-top: 10px;
-    
+
         img {
             position: absolute;
             top: -2px;
         }
     }
-    .toggle-button:focus{
+    .toggle-button:focus {
         outline: none;
     }
 }
