--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -1,3 +1,5 @@
+@import "../pancake/sass/pancake.scss";
+
 $main: #f55860;
 $body: #494949;
 
@@ -10,9 +12,6 @@ $magda-dark-blue: #2c3e50;
 $magda-green: #16a085;
 $magda-red: #c0392b;
 $magda-yellow: #f1c40f;
-$heading1: 1.4rem;
-$heading2: 1rem;
-$heading3: 1rem;
 $success: #145e70;
 $banner-text: #48c9f6;
 
