--- a/magda-web-client/src/Components/Account/Login.scss
+++ b/magda-web-client/src/Components/Account/Login.scss
@@ -1,3 +1,4 @@
+@import "../../variables";
 .login {
     &__providers {
         list-style: none;
@@ -21,6 +22,6 @@
 
     &__email-icon {
         color: #c0392b;
-        font-size: 1.7em;
+        @include AU-fontgrid(lg);
     }
 }
