--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -31,7 +31,7 @@
             display: inline-block;
             border-bottom: 0;
             color: #494949;
-            font-family: Rubik;
+            font-family: $font-base;
             font-size: 16px;
             line-height: 40px;
             margin-right: 32px;
