--- a/magda-web-client/src/Components/Search/Search.scss
+++ b/magda-web-client/src/Components/Search/Search.scss
@@ -4,9 +4,8 @@
     .sub-heading {
         color: $body;
         margin-top: 10px;
-        font-size: 16px;
+        @include AU-fontgrid(sm);
         font-weight: 500;
-        line-height: 19px;
         text-transform: uppercase;
         margin-bottom: 24px;
         @media (max-width: $medium) {
