--- a/magda-web-client/src/UI/MonthPicker.scss
+++ b/magda-web-client/src/UI/MonthPicker.scss
@@ -2,7 +2,7 @@
 
 .month-picker {
     width: calc(50% - 10px);
-    font-family: $font-base;
+    @include AU-fontgrid(sm);
     position: relative;
     .mui-textfield {
         margin: 0;
@@ -14,8 +14,7 @@
             text-align: center;
             border-bottom: none;
             box-shadow: inset 0 -1px 0 0 rgba(73, 73, 73, 0.1);
-            font-size: 14px;
-            line-height: 20px;
+            @include AU-fontgrid(xs);
             padding-top: 16px;
             padding-bottom: 16px;
             height: auto;
@@ -47,8 +46,7 @@
 
     .btn-month {
         box-shadow: inset 0 -1px 0 0 rgba(73, 73, 73, 0.1);
-        font-weight: 400;
-        font-size: 12px;
+        @include AU-fontgrid(xs);
         line-height: 14px;
         padding: 16px 1%;
         text-align: center;
